Ajout Pop-Up, ajout méthodes, modification header et footer pour que ça soit plus joli

--- a/serverApp/src/app/admin/components/header/header.component.html
+++ b/serverApp/src/app/admin/components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works! yes</p>
+<head>
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+    rel="stylesheet"
+  />
+</head>
+<header>
+  <h1>Application de gestion de serveur</h1>
+</header>
