--- a/serverApp/src/app/admin/components/header/header.component.css
+++ b/serverApp/src/app/admin/components/header/header.component.css
@@ -4,10 +4,17 @@ header {
   font-size: 24px;
   text-align: center;
   padding: 10px;
+  display: flex;
+  justify-content: space-around;
 }
 
 h1 {
   margin: 0;
   font-size: 36px;
   font-weight: bold;
+  margin-right: 15%;
+}
+
+p {
+  font-size: 15px;
 }
