--- a/serverApp/src/app/app.component.html
+++ b/serverApp/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
-<app-server-base></app-server-base>
+<app-header (filterChanged)="serverBase.filterServer($event)"></app-header>
+<app-server-base #serverBase></app-server-base>
 <app-footer></app-footer>
