--- a/serverApp/src/app/admin/components/header/header.component.css
+++ b/serverApp/src/app/admin/components/header/header.component.css
@@ -18,3 +18,11 @@ h1 {
 p {
   font-size: 15px;
 }
+.success-message {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #3c763d;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+}
