Correction bouton close, amélioration gestion d'objets update

--- a/serverApp/src/app/admin/components/popup/popup.component.html
+++ b/serverApp/src/app/admin/components/popup/popup.component.html
@@ -1,5 +1,5 @@
 <div class="popup">
-  <h1>Add a new server</h1>
+  <h1>Add a new serverLolilol</h1>
   <form *ngIf="form" [formGroup]="form">
     <label>
       IP Address:
