--- a/serverApp/src/app/admin/containers/server-base/server-base.component.html
+++ b/serverApp/src/app/admin/containers/server-base/server-base.component.html
@@ -35,6 +35,7 @@
   (addNewServer)="addNewServer($event)"
   (updateServer)="onUpdateServer($event)"
   (onActionCompleted)="closeUpdatePopup()"
+  (actionCompleted)="closeUpdatePopup()"
 ></app-server-popup>
 
 <!--  <p>Le texte suivant montre l'intégralité des données envoyées par le backend</p>
