Ajout gestion du ping, dynamisme + éléments visuels

--- a/serverApp/src/app/admin/containers/server-base/server-base.component.html
+++ b/serverApp/src/app/admin/containers/server-base/server-base.component.html
@@ -40,6 +40,7 @@
       <td>
         <button (click)="deleteServer(server.id)">Supprimer</button>
         <button (click)="openUpdatePopup(server)">Mettre à jour</button>
+        <button (click)="pingServer(server.ipAdress)">Ping</button>
       </td>
     </tr>
   </tbody>
